--- a/swagger/components/schemas/contact.yaml
+++ b/swagger/components/schemas/contact.yaml
@@ -1,24 +1,20 @@
-# swagger/components/schemas/student.yaml
-
 type: object
 required:
-  - _id
   - name
   - phoneNumber
-  - userId
 properties:
   _id:
     description: "Contact's id"
     type: string
-    example: 65e4decdd286b30065d54af9
+    example: 66825bb8b8e0d31d3694652a
   name:
     description: "Contact's name"
     type: string
-    example: 'John Doe'
+    example: 'Oleksii Boiko'
   phoneNumber:
     description: "Contact's phone number"
-    type: number
-    example: 1112233
+    type: string
+    example: '0987654321'
   email:
     description: "Contact's email"
     type: string
@@ -28,14 +24,14 @@ properties:
     type: boolean
     example: false
   contactType:
-    description: 'Type of this contact'
+    description: "Contact's type"
     type: string
     enum: ['work', 'home', 'personal']
-    example: 'home'
+    example: 'personal'
   userId:
     description: "Contact's user id"
     type: string
-    example: 65e4decdd286b30065d54af9
+    example: 666c166d789292a778a0070d
   photo:
     description: "Link to contact's photo"
     type: string
