--- a/swagger/paths/contacts/{id}/get.yaml
+++ b/swagger/paths/contacts/{id}/get.yaml
@@ -1,4 +1,3 @@
-# swagger/paths/studens/{id}/get.yaml
 tags:
   - Contacts
 summary: Get contact by id
@@ -12,7 +11,7 @@ parameters:
     required: true
     schema:
       type: string
-      example: '65ca67e7ae7f10c88b598384'
+      example: '66825bb8b8e0d31d3694652a'
 responses:
   '200':
     description: 'Get contact by id'
@@ -36,3 +35,5 @@ responses:
               $ref: '../../../components/schemas/contact.yaml'
   '401':
     $ref: '../../../components/responses/401.yaml'
+  '404':
+    $ref: '../../../components/responses/404.yaml'
