--- a/swagger/paths/contacts/{id}/patch.yaml
+++ b/swagger/paths/contacts/{id}/patch.yaml
@@ -1,10 +1,17 @@
 tags:
   - Contacts
-summary: Create contact
-operationId: createContact
-description: 'Create a contact with payload'
+summary: Patch contact by id
+operationId: patchContact
+description: 'Patch contact by id'
 security:
   - bearerAuth: []
+parameters:
+  - in: path
+    name: id
+    required: true
+    schema:
+      type: string
+      example: '66825bb8b8e0d31d3694652a'
 requestBody:
   content:
     multipart/form-data:
@@ -17,7 +24,7 @@ requestBody:
           name:
             description: "Contact's name"
             type: string
-            example: 'Ivan Ivanov'
+            example: 'Oleksii Boiko'
           phoneNumber:
             description: "Contact's phone number"
             type: string
@@ -25,9 +32,9 @@ requestBody:
           email:
             description: "Contact's email"
             type: string
-            example: 'example@mail.com'
+            example: 'oleksiiboiko@gmail.com'
           isFavourite:
-            description: 'Is this contact favourite'
+            description: 'Whether is contact favourite'
             type: boolean
             example: false
           contactType:
@@ -39,9 +46,10 @@ requestBody:
             description: "Link to contact's photo"
             type: string
             format: binary
+
 responses:
-  '201':
-    description: Creates a contact
+  '200':
+    description: 'Patch contact by id'
     content:
       application/json:
         schema:
@@ -56,9 +64,11 @@ responses:
               example: 200
             message:
               type: string
-              example: Successfully created a contact!
+              example: Successfully patched a contact!
             data:
               type: object
-              $ref: '../../components/schemas/contact.yaml'
+              $ref: '../../../components/schemas/contact.yaml'
   '401':
-    $ref: '../../components/responses/401.yaml'
+    $ref: '../../../components/responses/401.yaml'
+  '404':
+    $ref: '../../../components/responses/404.yaml'
